Build agent fixes